real-time-location/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: real-time-location
  namespace: staging
  labels:
    app: real-time-location
spec:
  replicas: 5
  selector:
    matchLabels:
      app: real-time-location
  template:
    metadata:
      labels:
        app: real-time-location
    spec:
      containers:
      - name: real-time-location
        image: rafa93br/real-time-location:1.0.0
        ports:
        - containerPort: 3000
