real-time-location/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: real-time-location
  namespace: staging
spec:
  ports:
  - name: http
    targetPort: 3000
    port: 80
    protocol: TCP
  selector:
    app: real-time-location
